src/main/java/com/example/boardservice/error/BusinessException.java
package com.example.boardservice.error;

public class BusinessException extends RuntimeException {
    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        this.errorCode = errorCode;
    }
}
